# china-areas

./: .gitignore  Cargo.toml  README.md  areas.code-workspace  build.sh  git.sh
data/: areas.csv  areas.json  areas.sql
data/amap/: areas-level1.json  areas-level2.json  areas-level3.json  areas-level3.sql  areas-level4.csv  areas-level4.sql  areas.sql
data/jd/: areas-level1.csv  areas-level1.json  areas-level2.csv  areas-level2.json  areas-level3.csv  areas-level3.json  areas-level3.sql  areas-level4.csv  areas.sql
data/std/: areas-level1.sql  areas-level2.sql  areas-level3.sql
examples/: cawler.rs  cnt.rs  hdoc.rs  reg.rs
src/: amap.rs  client.rs  error.rs  jd.rs  main.rs  mca.rs  net.rs  standard.rs  stats.rs  util.rs
