[package]
name = "areas"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest="*"
regex= "1.3.1"
serde= "1.0.102"
serde_json= "1.0.41"
serde_derive= "1.0.102"
indicatif= "0.12.0"
select = "0.4.3"
scraper = "0.11.0"
reqwest = "0.9.22"

[dependencies.lane_net]
path="../lane/net"
version="0.1.0"

# 可以减少编译后的文件大小
[profile.release]
lto = true

