[package]
name = "areas"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest="*"
regex= "1.3.4"
serde= "1.0.104"
serde_json= "1.0.48"
serde_derive= "1.0.104"
indicatif= "0.14.0"
select = "0.4.3"
scraper = "0.11.0"
reqwest = "0.10.3"

[dependencies.lane_net]
path="../lane/net"
version="0.1.0"

# 可以减少编译后的文件大小
[profile.release]
lto = true

