[package]
name = "areas"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest="*"
regex= "1.7.1"
serde= "1.0.152"
serde_json= "1.0.94"
serde_derive= "1.0.152"
indicatif= "0.17.3"
select = "0.6.0"
scraper = "0.15.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"]}
bytes = "1.4.0"

# [dependencies.lane_net]
# path="../lane/net"
# version="0.1.0"

# 可以减少编译后的文件大小
[profile.release]
lto = true

